#14 fix sonar code smells